tdf#141773 AutoCorrect: fix broken [All] dictionaries

This reverts commit ae56dc05b27f05ffcee99845d661a237e70a7a51
"tdf#96787: AutoCorrect: after deleting a replacement entry, it's still used".

Change-Id: Ifb4cf1b359b852c7610337d4bd389a8ca5dce610
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169713
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>